# vfw-ffmpeg-bridge

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
installer/: installer.nsi  prepare-deps.py  readme-ffmpeg.txt
src/: AudioSets.cpp  AudioSets.hpp  BridgeConfig.cpp  BridgeConfig.hpp  CodecSets.cpp  CodecSets.hpp  CodecState.cpp  CodecState.hpp  dialog.rc  resource.h  subprocess.hpp  tmaudio.cpp  utils.cpp  utils.hpp  vfwbrdg.cpp  vfwbrdg.def
